--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tahjib Ahmed S.
-logo: /assets/img/headshot_circle.png
+logo: /assets/img/tahjib.jpg
 description: Entry-level Data Analyst . BI Analyst . Business analyst . Power Bi specialist
 show_downloads: true
 theme: jekyll-theme-minimal
