--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tahjib Ahmed S.
 logo: /assets/img/tahjib.jpg
-description: Entry-level Data Analyst . BI Analyst . Power BI specialist
+description: Freelance Data Analyst . BI Analyst . Power BI specialist
 show_downloads: true
 theme: jekyll-theme-cayman
 
