--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,9 @@ main:
 
   - title: "Projects"
     url: /projects/
+
+  - title: "Experience"
+    url: /experience/
+
+  - title: "Contact"
+    url: /contact/
