--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ plugins:
 author:
   name   : "Tahjib Ahmed Siddique"
   avatar : "/assets/img/tahjib.jpg"
-  bio    : "Turning data into insights using Power BI, Python, and SQL."
+  bio    : "Turning data into insights using any technology needed."
 
 social:
   links:
