--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,11 @@ remote_theme: mmistakes/minimal-mistakes
 
 plugins:
   - jekyll-include-cache
+  - jekyll-feed
+  - jekyll-seo-tag
+
+markdown: kramdown
+highlighter: rouge
 
 author:
   name   : "Tahjib Ahmed Siddique"
