--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,17 @@
 title: "Tahjib Ahmed S."
 description: "Freelance Data Analyst · BI Analyst · Power BI Specialist"
-baseurl: ""
+baseurl: "" # leave empty for GitHub Pages
 url: "https://tahjib07.github.io"
-remote_theme: mmistakes/minimal-mistakes
+
+# IMPORTANT: This disables default theme so remote_theme works
+theme: null
+remote_theme: "mmistakes/minimal-mistakes"
 
 plugins:
-  - jekyll-include-cache
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-include-cache
+  - jekyll-remote-theme
 
 markdown: kramdown
 highlighter: rouge
