--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Tahjib Ahmed S."
-description: "Freelance Data Analyst · BI Analyst · Power BI Specialist"
+title: "Tahjib Ahmed Siddique"
+description: "Tahjib Ahmed Siddique – Freelance Data Analyst, Power BI Specialist"
 baseurl: "" # Do not add trailing slash
 url: "https://tahjib07.github.io"
 
